--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -28,13 +28,13 @@
   );
 
 
-  var myLinksSort = document.getElementById("opss-results-sort");
+  /*var myLinksSort = document.getElementById("opss-results-sort");
   var myLinksSortHeight = (parseFloat(getComputedStyle(myLinksSort, null).height.replace("px", "")) * 2) - 10;
   //var myLinksSortDDs = myLinksSort.getElementsByTagName("dd").length;
   //var howMuchMargin = (myLinksSortHeight * 2) - 10; // 10 = borders of DL and top of table
 
   myLinksSort.addEventListener("click", function(e){
-      //e.preventDefault();
+
 
       myLinksSort.classList.remove("opss-dl-select--closed");
       myLinksSort.style.marginBottom = "-"+ myLinksSortHeight +"px";
@@ -48,7 +48,7 @@
       //window.location.replace(mySort.value);
       //return false;
     }
-  );
+  );*/
 </script>
 
 
