update to the task text list

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -223,7 +223,7 @@ Also, on a slightly separate note, on the final review draft page, if any nanoma
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> Add (an item)<br>
-                    The <u>Add</u> link simply goes to the first page of the new items task ("What is the item called?"), and on completion adds the item to <b>top</b> of the item list as 'Completed'.
+                    On the prototype, clicking the <u>Add</u> link appends another holding place link to the list, which the user then clicks to start that task. If an item is added after all the other item tasks have been completed then the Accept and submit task must return to its 'Cannot start yet' status. i.e, If there is any task before the Accept and submit which is not complete the Accept and submit cannot be started.
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-item-success" target="_blank">Remove (item) success</a> <br>
