--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -181,6 +181,8 @@
 
         </section>
 
+        <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
+
     </article>
 
     <aside class="govuk-grid-column-one-quarter opss-desktop-padding-left-0"> <!--  opss-desktop-sticky -->
