link texts updated

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -265,7 +265,7 @@ Also, on a slightly separate note, on the final review draft page, if any nanoma
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1a" target="_blank">Accept and submit - review</a><br>
-                    The user clicks the Accept and submit task and goes to this review draft page. There is a Back link. The Green button is a 'Continue' hyperlink to the next formal Accept and submit page. The 'Cancel' link simply returns the user back to the tasks list page.
+                    The user clicks the Accept and submit task and goes to this review draft page. There is a Back link. The Green button is a 'Continue' hyperlink to the next formal Accept and submit page.
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New feature:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1a-errors" target="_blank">Accept and submit - review errors</a><br>
