--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
@@ -31,7 +31,8 @@
       </li>
     </ul>
 
-    <p class="govuk-body govuk-!-margin-bottom-1">Include these nanomaterial(s) in an item or remove them. <br class="opss-br-desktop">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
+    <p class="govuk-body govuk-!-margin-bottom-1">Include these nanomaterial(s) in an item or remove them. <br class="opss-br-desktop">
+    <a href="#" class="govuk-link govuk-link--no-visited-state">Return to the tasks list page</a>.</p>
 
   </div>
 </div>
@@ -401,11 +402,7 @@
         </dl>
       </section>
 
-        <section class="govuk-!-margin-top-7">
-          <div class="govuk-button-group">
-              <a href="#" class="govuk-link govuk-link--no-visited-state">Return to the tasks list page</a>
-          </div>
-        </section>
+        <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-2">Return to the <a href="#" class="govuk-link govuk-link--no-visited-state">tasks list page</a>.</p>
 
     </article>
 
