--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a.html
@@ -383,7 +383,7 @@
           <div class="govuk-button-group">
               <a href="pg-accept-and-submit-2.html" class="govuk-button">Continue</button>
 
-              <a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a>
+              <a href="#" class="govuk-link govuk-link--no-visited-state">Return to the tasks list page</a>
           </div>
         </section>
 
