--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -415,7 +415,7 @@
 
         </form>
 
-        <div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-padding-left-2 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-218px opss-full-height__col--bottom opss-border-all">
+        <div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-margin-bottom-3 govuk-!-margin-right-1 opss-desktop-margin-bottom-240px opss-full-height__col--bottom opss-right-box-arrow">
             <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
                 Request this list as a downloadable <br class="opss-br-desktop"><a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
             </p>
