removed trading std sentence

--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-success.html
@@ -30,7 +30,7 @@
         <h2 class="govuk-heading-m">What happens next</h2>
 
         <p class="govuk-body">
-          You can now place your cosmetic product on the <abbr title="Great Britain">GB</abbr> market. Your cosmetic product notification will now be searchable by market surveillance authorities. If you have any concerns about your cosmetic product and compliance, please contact your local <a href="https://www.gov.uk/find-local-trading-standards-office" class="govuk-link govuk-link--no-visited-state">Trading Standards office</a>. You can find your local Trading Standards office here.
+          You can now place your cosmetic product on the <abbr title="Great Britain">GB</abbr> market. Your cosmetic product notification will now be searchable by market surveillance authorities. If you have any concerns about your cosmetic product and compliance, please contact your local <a href="https://www.gov.uk/find-local-trading-standards-office" class="govuk-link govuk-link--no-visited-state">Trading Standards office</a>.
         </p>
 
         <p class="govuk-body">
