--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -105,8 +105,10 @@ body.js-enabled .opss-nojs-hide {
 .opss-error-colour {
     color: $govuk-error-colour;
 }
-
-@include govuk-media-query($from: desktop) {
+.opss-grey-bg {
+    background-color: govuk-colour("light-grey");
+}
+/*@include govuk-media-query($from: desktop) {//use on
     .opss-right-box-arrow {
         position: relative;
         background-color: govuk-colour("light-grey");
@@ -132,7 +134,7 @@ body.js-enabled .opss-nojs-hide {
         border-width: 40px;
         margin-top: -40px;
     }
-}
+}*/
 
 abbr[title]{
     text-decoration: none;
