--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1a-errors.html
@@ -20,7 +20,7 @@
   </h2>
   <div class="govuk-error-summary__body">
 
-    <p class="govuk-body govuk-!-font-weight-bold opss-error-colour">You cannot Accept and submit the draft because:</p>
+    <p class="govuk-body govuk-!-font-weight-bold opss-error-colour">You cannot Accept and submit this draft because:</p>
 
     <ul class="govuk-list govuk-list--bullet govuk-error-summary__list govuk-!-margin-bottom-4">
       <li>
@@ -31,7 +31,7 @@
       </li>
     </ul>
 
-    <p class="govuk-body govuk-!-margin-bottom-1">Include these nanomaterial(s) in an item or remove them. <br class="opss-br-desktop">
+    <p class="govuk-body govuk-!-margin-bottom-1">Remove the nanomaterial(s) or include it in an item. <br class="opss-br-desktop">
     <a href="#" class="govuk-link govuk-link--no-visited-state">Return to the tasks list page</a>.</p>
 
   </div>
