--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -8,7 +8,7 @@
             Skip to results
         </a>
 
-        <form action="#" method="post" novalidate>
+
 
             <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                 <fieldset class="govuk-fieldset">
@@ -404,18 +404,18 @@
             </details>
 
             <div class="govuk-button-group">
-                <button type="submit" class="govuk-button" data-module="govuk-button">
+                <button type="submit" class="govuk-button">
                     Apply
                 </button>
 
-                <button type="reset" class="govuk-button opss-button-link govuk-!-font-size-16 opss-nojs-hide" id="opss-reset" data-module="govuk-button">
-                    Reset form
+                <button type="button" class="govuk-button opss-button-link govuk-!-font-size-16 opss-nojs-hide" id="opss-reset">
+                    Reset
                 </button>
             </div>
 
-        </form>
 
-        <div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-margin-bottom-3 govuk-!-margin-right-1 opss-desktop-margin-bottom-240px opss-full-height__col--bottom opss-right-box-arrow">
+
+        <div class="govuk-!-padding-top-3 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-3 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-grey-bg">
             <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
                 Request this list as a downloadable <br class="opss-br-desktop"><a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
             </p>
@@ -426,3 +426,5 @@
             </p>
         </div-->
     </section>
+
+    </form>
