--- a/app/views/psd-general/inc_opss-header-section.html
+++ b/app/views/psd-general/inc_opss-header-section.html
@@ -37,10 +37,11 @@
     </div>
 </div>
 
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+<form action="#" role="search" method="post" novalidate>
 
-        <form action="#" method="post" role="search" spellcheck="false" novalidate>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full">
+
             <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-7"> <!-- opss-border-bottom -->
 
                 <label class="govuk-label" for="cases-search">
@@ -55,7 +56,6 @@
                 </div>
 
             </div>
-        </form>
 
+        </div>
     </div>
-</div>
