--- a/app/views/psd-general/products-page.html
+++ b/app/views/psd-general/products-page.html
@@ -125,7 +125,7 @@
           </div>
 
 
-        <div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-margin-bottom-3 govuk-!-margin-right-1 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-right-box-arrow">
+        <div class="govuk-!-padding-top-3 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-3 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-grey-bg">
             <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
                 Request this list as a downloadable <br class="opss-br-desktop"><a href="#" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
             </p>
