--- a/app/views/index.html
+++ b/app/views/index.html
@@ -174,6 +174,15 @@
             <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
             <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
           </ul>
+
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Provide users with ability to remove an invited user (and cancel the invite token), (COSBETA-1293)</li>
+            <li><a href="/nanomaterials-1149/team-members.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Team members - showing new 'Cancel invitation' link</a></li>
+            <li><a href="/cosmetics-general/cancel-invitation.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Cancel invitation page</a></li>
+            <li><a href="/nanomaterials-1149/team-members-cancelled.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Cancel invitation page</a></li>
+          </ul>
         </div>
       </details>
 
@@ -258,8 +267,6 @@
             </ul>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-
 
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/incomplete-product_b_refresh_1.html" target="_blank">Incomplete notification</a> - Multi item kit - File has been uploaded - Accept button disabled</li>
