--- a/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
+++ b/app/views/cosmetics-search-designs/search-page-01b-new-reset.html
@@ -433,6 +433,7 @@
     var filterForm = document.getElementById('new_notification_search_form_filters');
     var ele1 = filterForm.querySelectorAll('.govuk-radios__conditional');
     var ele2 = filterForm.querySelectorAll('.govuk-radios--conditional .govuk-radios__input');
+    var ele3 = filterForm.querySelectorAll('.govuk-radios--conditional .govuk-date-input__input');
 
     document.getElementById('opss-reset').addEventListener('click', function () {//click the filter's form reset link/button
         ele1.forEach(function(e1) {
@@ -440,6 +441,10 @@
         });
         ele2.forEach(function(e2) {
             e2.setAttribute('aria-expanded', false);
+            e2.removeAttribute('checked');
+        });
+        ele3.forEach(function(e3) {
+            e3.setAttribute('value', '');
         });
     }, false);
 </script>
