--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -79,8 +79,8 @@
                             </label>
 
                           <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
-                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1">Option 1</option>
-                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt2" selected="selected">Option 2</option>
+                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1" selected="selected">Option 1</option>
+                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt2">Option 2</option>
                                 <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt3">Option 3</option>
                             </select>
                         </fieldset>
@@ -110,7 +110,7 @@
         </div>
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Businesses">
+            <div class="govuk-grid-column-three-quarters" role="region" aria-label="Businesses">
 
                 <table id="results" class="govuk-table opss-table opss-table--last-col-right">
                   <caption class="govuk-table__caption govuk-visually-hidden">Businesses: a simple data table.</caption>
