--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -79,9 +79,8 @@
                             </label>
 
                           <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
-                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1" selected="selected">Option 1</option>
-                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt2">Option 2</option>
-                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt3">Option 3</option>
+                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt1" selected="selected">Name A&ndash;Z</option>
+                                <option value="https://opss-html.herokuapp.com/psd-general/cases-page?sort=opt2">Name Z&ndash;A</option>
                             </select>
                         </fieldset>
 
