--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -39,14 +39,14 @@
   var mySection = findAncestor(myReset,"section");
 
   myReset.addEventListener("click", function(){
-      var checkedRadios = mySection.querySelectorAll(".govuk-radios__input[checked]");
-      Array.prototype.forEach.call(checkedRadios, function(el, i){
-        el.removeAttribute('checked');
+      var checkedRadios = document.querySelectorAll('.govuk-radios__input');
+      Array.prototype.forEach.call(checkedRadios, function(el, i) {
+        el.checked = false;
       });
 
       var radioGroups = mySection.querySelectorAll(".govuk-radios");
       Array.prototype.forEach.call(radioGroups, function(el, i){
-        el.querySelector(".govuk-radios__input").setAttribute("checked", "checked");
+        el.querySelector(".govuk-radios__input").checked = true;
       });
     }
   );
