--- a/app/views/psd-general/inc_opss-results-section-keywords.html
+++ b/app/views/psd-general/inc_opss-results-section-keywords.html
@@ -749,7 +749,7 @@
                                 Case title
                             </th>
                             <th id="item-20" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Case number 20 in this list</a>
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">Tesco hand cream</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
