updated business page

--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -176,7 +176,7 @@
                                 <div class="govuk-radios__item">
                                     <input class="govuk-radios__input" id="teams_with_access_none_" name="teams_access" type="radio" value="teams_with_access_none" checked="checked">
                                     <label class="govuk-label govuk-radios__label" for="teams_with_access_none_">
-                                        None
+                                        All
                                     </label>
                                 </div>
                                 <div class="govuk-radios__item">
