--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -23,7 +23,7 @@
             </summary>
             <div class="govuk-details__text">
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
-                    <span id="search-hint">You can search for one or more businesses using the keywords that describe them.</span> You can also sort the ordering of the search results.
+                    <span id="search-hint">You can search for one or more businesses using the keywords that describe them or search for a specific business by using its company number.</span> You can also sort the ordering of the search results.
                 </p>
                 <p class="govuk-body-s govuk-visually-hidden">
                   Search results appear within the following <code>form</code> and within the <code>role = region</code>.
