new sort option on business

--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -341,3 +341,10 @@ ul.opss-radio-list {
         }
     }
 }
+/*********************************************************************/
+
+@include govuk-media-query($from: desktop) {
+    .opss-desktop-padding-0 {
+        padding: 0 !important ;
+    }
+}
