--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -51,6 +51,12 @@
       Array.prototype.forEach.call(radioGroups, function(el, i){
         el.querySelector(".govuk-radios__input").checked = true;
       });
+
+      /*var autoInputs = mySection.querySelectorAll(".autocomplete__input");
+      Array.prototype.forEach.call(autoInputs, function(el, i){
+        //el.setAttribute('value', '');
+      });*/
+
     }
   );
   //****** js for reset fitlers ends ******
