--- a/app/views/psd-revised-flow/template-01.html
+++ b/app/views/psd-revised-flow/template-01.html
@@ -11,20 +11,83 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-    <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">Dyson vacuum cleaner, washing machine – electric shock hazard</span>
-        Allergation: 2101-0008
-    </h1>
+        <h1 class="govuk-heading-l">
+            <span class="govuk-caption-l">Dyson vacuum cleaner, washing machine – electric shock hazard</span>
+            Allergation: 2101-0008
+        </h1>
 
     </div>
 </div>
 
 <div class="govuk-grid-row">
-    <nav class="govuk-grid-column-one-quarter opss-desktop-padding-right-0">
+    <nav class="govuk-grid-column-one-quarter govuk-!-padding-left-0" style="background: lime;">
+        <ul class="govuk-list">
+          <li>
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/colour/">Colour</a>
+          </li>
+          <li>
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/images/">Images</a>
+          </li>
+          <li>
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/layout/">Layout</a>
+          </li>
+          <li>
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/page-template/">Page template</a>
+          </li>
+          <li>
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/spacing/">Spacing</a>
+          </li>
+          <li class="app-subnav__section-item app-subnav__section-item--current">
+            <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/">Typography</a>
 
+              <ul class="govuk-list">
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#font">
+                        Font
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#headings">
+                        Headings
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#paragraphs">
+                        Paragraphs
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#text-alignment-override-classes">
+                        Text alignment override classes
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#font-override-classes">
+                        Font override classes
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#links">
+                        Links
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#lists">
+                        Lists
+                      </a>
+                    </li>
+                    <li>
+                      <a class="govuk-link govuk-link--no-visited-state" href="/styles/typography/#section-break">
+                        Section break
+                      </a>
+                    </li>
+              </ul>
+
+          </li>
+        </ul>
     </nav>
 
-    <article class="govuk-grid-column-three-quarters">
+    <article class="govuk-grid-column-one-half">
 
         <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-top-5 govuk-!-margin-bottom-4 opss-summary-list-mixed">
             <div class="govuk-summary-list__row">
@@ -423,8 +486,8 @@
 
     </article>
 
-    <aside class="govuk-grid-column-one-quarter opss-desktop-padding-left-0"> <!--  opss-desktop-sticky -->
-        <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-2 govuk-!-margin-top-4 govuk-!-margin-bottom-4">
+    <aside class="govuk-grid-column-one-quarter">
+        <div class="opss-border-all govuk-!-margin-top-4 govuk-!-margin-bottom-4">
             <h2 class="govuk-heading-s">Responsible Person</h2>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-vertical">
@@ -444,7 +507,7 @@
             </dl>
         </div>
 
-        <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-2 govuk-!-margin-top-4 govuk-!-margin-bottom-4">
+        <div class="opss-border-all govuk-!-margin-top-4 govuk-!-margin-bottom-4">
             <h2 class="govuk-heading-s">Assigned contact</h2>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-vertical">
