psd design flow work

--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -249,7 +249,7 @@ ul.opss-radio-list {
         border: 1px solid $govuk-border-colour;
         float: left;
         margin-left: 0;
-        min-width: 64px;
+        min-width: 76px;
         text-align: center;
     }
 }
@@ -329,6 +329,7 @@ ul.opss-radio-list {
         &.opss-dl-select__active a {
             color: govuk-colour("white");
             background-color: $govuk-link-colour;
+            cursor: pointer;
         }
 
         a:focus,
@@ -347,4 +348,79 @@ ul.opss-radio-list {
     .opss-desktop-padding-0 {
         padding: 0 !important ;
     }
+
+    .opss-two-col-flow {
+        column-count: 2;
+        column-gap: govuk-spacing(8);
+
+        .opss-summary-list-mixed > div {
+            /*min-height: 3rem;*/
+            break-inside: avoid-column;
+        }
+        .opss-summary-list-mixed.opss-summary-list-mixed--sm {
+            margin-bottom: 0;
+
+            dt {
+                width: 36% !important;
+            }
+        }
+    }
 }
+
+.opss-left-nav {
+    padding: 0;
+
+    li {
+        margin-bottom: 0;
+        padding: govuk-spacing(2) 0;
+        @include opss-font-size($s: 16px, $l: 1.2);
+
+        ul {
+            padding-left: govuk-spacing(4);
+            margin-bottom: 0;
+
+            li {
+                padding-bottom: 0;
+
+                &:before {
+                    content: "—";
+                    margin-left: - govuk-spacing(4);
+                    color: $govuk-secondary-text-colour;
+                }
+            }
+        }
+
+        a {
+            text-decoration: none !important;
+            text-underline-offset: 0.1em;
+
+            &:hover {
+                text-decoration: underline !important;
+                text-decoration-thickness: 0.2em !important;
+                text-decoration-thickness: 3px !important;
+                -webkit-text-decoration-skip-ink: none;
+                text-decoration-skip-ink: none;
+                -webkit-text-decoration-skip: none;
+                text-decoration-skip: none;
+            }
+
+        }
+    }
+
+    .opss-left-nav__active {
+        ul {
+            padding-left: govuk-spacing(6);
+        }
+
+        & > a {
+            font-weight: bold;
+            margin-left: govuk-spacing(2);
+        }
+
+        display: block;
+        margin-left: - govuk-spacing(2) - 4;
+        border-left: 4px solid $govuk-brand-colour;
+
+    }
+}
+
