--- a/app/views/product-case-testing/do-you-have-the-barcode.html
+++ b/app/views/product-case-testing/do-you-have-the-barcode.html
@@ -23,7 +23,7 @@
 
       <li>
 
-        <a href="#barcode">Select yes if you have the product barcode number</a>
+        <a href="#barcode">Select yes if you know the product barcode number</a>
 
       </li>
       <li>
@@ -57,13 +57,13 @@
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 
     <h1 class="govuk-fieldset__heading">
-      Do you have the product barcode number?
+      Do you know the product barcode number?
     </h1>
 
   </legend>
 
   <span id="barcode-error" class="govuk-error-message">
-    <span class="govuk-visually-hidden">Error:</span> Select yes if you have the product barcode number
+    <span class="govuk-visually-hidden">Error:</span> Select yes if you know the product barcode number
   </span>
 
   <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1 govuk-radios--conditional" data-module="govuk-radios">
